Primera versión de la UI

--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,14 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'com.github.juanmanuellosada:noticracia-core:presentacion-init-core-SNAPSHOT'
+
 }
 
 test {
