Actualizacion UI it0
- FALTA FIXEAR EL REPAINT

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'com.github.juanmanuellosada:noticracia-core:main-SNAPSHOT'
+    implementation 'com.github.juanmanuellosada:noticracia-core:a0e6b9af5f'
 }
 
 test {
